--- a/style.css
+++ b/style.css
@@ -4,7 +4,52 @@
     margin: 0 auto;
 }
 .index-img{
-    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 20px;
 }
-
+a{
+    text-decoration: none;
+}
+.index-h1{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: blue;
+    border-radius: 20px;
+}
+body{
+    background-color: rgb(0, 191, 255);
+}
+.index-logo{
+    text-decoration: none;
+    font-size: 50px;
+    display: flex;
+    justify-content: center;
+    background-color: rgb(179, 135, 250);
+    width: 220px;
+    border-radius: 10px;
+}
+.index-logo2{
+    text-decoration: none;
+    font-size: 50px;
+    display: flex;
+    justify-content: center;
+    background-color: rgb(11, 202, 148);
+    width: 220px;
+    border-radius: 10px;
+}
+.ul-nav2{
+    display: flex;
+    justify-content: space-between;
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
+.ul-nav{
+    display: flex;
+    justify-content: space-between;
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
 
