--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-.container{
+
+   container{
     width: 1200px;
     padding: 0 15px;
     margin: 0 auto;
@@ -28,7 +29,7 @@ body{
     display: flex;
     justify-content: center;
     background-color: rgb(179, 135, 250);
-    width: 220px;
+    width: 280px;
     border-radius: 10px;
 }
 .index-logo2{
@@ -37,7 +38,7 @@ body{
     display: flex;
     justify-content: center;
     background-color: rgb(11, 202, 148);
-    width: 220px;
+    width: 280px;
     border-radius: 10px;
 }
 .ul-nav2{
@@ -52,4 +53,13 @@ body{
     padding-top: 15px;
     padding-bottom: 15px;
 }
+.index-logo:hover{
+    background-color: darkturquoise;
+}
+.index-logo2:hover{
+    background-color: rgb(0, 93, 241);
+}
+
+    
+
 
