--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
-
-   container{
+.container{
     width: 1200px;
     padding: 0 15px;
     margin: 0 auto;
@@ -46,6 +45,9 @@ body{
     justify-content: space-between;
     padding-top: 15px;
     padding-bottom: 15px;
+    background-color: blueviolet;
+    border-radius: 20px;
+    color: blue;
 }
 .ul-nav{
     display: flex;
@@ -59,6 +61,23 @@ body{
 .index-logo2:hover{
     background-color: rgb(0, 93, 241);
 }
+.index-info{
+    display: flex;
+    justify-content: space-between;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    background-color: blueviolet;
+    border-radius: 20px;
+}
+.index-hello{
+    background-color: aquamarine;
+    border-radius: 10px;
+    width: 280px;
+    font-size: 17px;
+}
+    
+
+
 
     
 
