--- a/style.css
+++ b/style.css
@@ -1,180 +1,157 @@
-body{ 
-    box-sizing: border-box; 
-    margin: 0 auto; 
-    font-size: 22px; 
+body{  
+    box-sizing: border-box;  
+    margin: 0 auto;  
+    font-size: 22px;  
+}  
+header{  
+    background-color: skyblue;  
+    padding-top: 15px;  
+    padding-bottom: 15px;  
+}  
+.container {  
+    width: 1200px;  
+    padding: 0 15px;  
+    margin: 0 auto;  
+}  
+  
+.index-img {  
+    display: block;  
+    margin: 0 auto;  
+    border-radius: 20px;  
+    margin-bottom: 50px;  
+}  
+  
+a {  
+    text-decoration: none;  
+}  
+ul{  
+    list-style: none;  
+    padding: 0;  
+    margin: 0;  
+}  
+.index-h1 {  
+    text-align: center;  
+    background-color: blue;  
+    border-radius: 20px;  
+    padding-top: 15px;  
+    padding-bottom: 15px;  
+}  
+  
+body {  
+    background-color: rgb(0, 191, 255);  
+}  
+  
+.index-logo {  
+    text-decoration: none;  
+    font-size: 50px;  
+    display: flex;  
+    justify-content: center;  
+    background-color: rgb(179, 135, 250);  
+    padding: 5px 12px;  
+    border-radius: 10px;  
+    font-weight: 700;  
+    color: black;  
+}  
+  
+.index-logo2 {  
+    text-decoration: none;  
+    font-size: 50px;  
+    display: flex;  
+    justify-content: center;  
+    background-color: rgb(11, 202, 148);  
+    width: 280px;  
+    border-radius: 10px;  
+}  
+  
+.ul-nav2 {  
+    display: flex;  
+    justify-content: space-between;  
+    width: 700px;  
+    padding: 15px 20px;  
+    background-color: blueviolet;  
+    border-radius: 20px;  
+    color: blue;  
+      
+}  
+  
+.ul-nav {  
+    display: flex;  
+    justify-content: space-between;  
+    padding-top: 15px;  
+    padding-bottom: 15px;  
+    width: 700px;  
+}  
+  
+.index-logo:hover {  
+    background-color: darkturquoise;  
+}  
+  
+.index-logo2:hover {  
+    background-color: rgb(0, 93, 241);  
+}  
+  
+.index-info {  
+    display: flex;  
+    justify-content: space-between;  
+    padding: 20px;  
+    background-color: blueviolet;  
+    border-radius: 20px;  
+}  
+  
+.index-hello {  
+    background-color: aquamarine;  
+    border-radius: 10px;  
+    width: 1000px;  
+    margin: 0 auto;  
+    padding: 15px;  
+    text-align: center;  
+    font-size: 24px;  
+    margin-bottom: 50px;  
+}  
+.header-container,  
+.footer-container{  
+    display: flex;  
+    justify-content: space-between;  
+    align-items: center;  
+}  
+.header-link{  
+    font-size: 24px;  
+    font-weight: 700;  
+    color: black;  
+}  
+.header-link:hover,  
+.header-link:focus{  
+    color: rgb(7, 159, 108);  
+}  
+.main-container{  
+    padding-top: 80px;  
+    padding-bottom: 80px;  
+}  
+.index-footer{  
+    background-color: skyblue;  
+    padding-top: 15px;  
+    padding-bottom: 15px;  
 } 
-header{ 
-    background-color: skyblue; 
-    padding-top: 15px; 
-    padding-bottom: 15px; 
-} 
-.container { 
-    width: 1200px; 
-    padding: 0 15px; 
-    margin: 0 auto; 
-} 
- 
-.index-img { 
-    display: block; 
-    margin: 0 auto; 
-    border-radius: 20px; 
-    margin-bottom: 50px; 
-} 
- 
-a { 
-    text-decoration: none; 
-} 
-ul{ 
-    list-style: none; 
-    padding: 0; 
-    margin: 0; 
-} 
-.index-h1 { 
-    text-align: center; 
-    background-color: blue; 
-    border-radius: 20px; 
-    padding-top: 15px; 
-    padding-bottom: 15px; 
-} 
- 
-body { 
-    background-color: rgb(0, 191, 255); 
-} 
- 
-.index-logo { 
-    text-decoration: none; 
-    font-size: 50px; 
-    display: flex; 
-    justify-content: center; 
-    background-color: rgb(179, 135, 250); 
-    padding: 5px 12px; 
-    border-radius: 10px; 
-    font-weight: 700; 
-    color: black; 
-} 
- 
-.index-logo2 { 
-    text-decoration: none; 
-    font-size: 50px; 
-    display: flex; 
-    justify-content: center; 
-    background-color: rgb(11, 202, 148); 
-    width: 280px; 
-    border-radius: 10px; 
-} 
- 
-.ul-nav2 { 
-    display: flex; 
-    justify-content: space-between; 
-    width: 700px; 
-    padding: 15px 20px; 
-    background-color: blueviolet; 
-    border-radius: 20px; 
-    color: blue; 
-     
-} 
- 
-.ul-nav { 
-    display: flex; 
-    justify-content: space-between; 
-    padding-top: 15px; 
-    padding-bottom: 15px; 
-    width: 700px; 
-} 
- 
-.index-logo:hover { 
-    background-color: darkturquoise; 
-} 
- 
-.index-logo2:hover { 
-    background-color: rgb(0, 93, 241); 
-} 
- 
-.index-info { 
-    display: flex; 
-    justify-content: space-between; 
-    padding: 20px; 
-    background-color: blueviolet; 
-    border-radius: 20px; 
-} 
- 
-.index-hello { 
-    background-color: aquamarine; 
-    border-radius: 10px; 
-    width: 1000px; 
-    margin: 0 auto; 
-    padding: 15px; 
-    text-align: center; 
-    font-size: 24px; 
-    margin-bottom: 50px; 
-} 
-.header-container, 
-.footer-container{ 
-    display: flex; 
-    justify-content: space-between; 
-    align-items: center; 
-} 
-.header-link{ 
-    font-size: 24px; 
-    font-weight: 700; 
-    color: black; 
-} 
-.header-link:hover, 
-.header-link:focus{ 
-    color: rgb(7, 159, 108); 
-} 
-.main-container{ 
-    padding-top: 80px; 
+.work{ 
+    padding-top: 80px ; 
     padding-bottom: 80px; 
 } 
-.index-footer{ 
-    background-color: skyblue; 
-    padding-top: 15px; 
-    padding-bottom: 15px; 
-}
-.work{
-    padding-top: 80px ;
-    padding-bottom: 80px;
-}
-.work-list{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-}
-.work-item{
-    border: 5px solid white;
-    padding: 30px;
-    background-color: aquamarine;
-    margin: 20px;
-}
-.work-item:hover,
-.work-item:focus{
-    border: 5px solid antiquewhite;
-}
-.work-ul-nav{
+.work-list{ 
     display: flex; 
+    flex-wrap: wrap; 
     justify-content: space-between; 
-    padding-top: 15px; 
-    padding-bottom: 15px; 
-    width: 700px; 
+} 
+.work-item{ 
+    width: 480px; 
+    border: 5px solid white; 
+    padding: 30px; 
+    background-color: aquamarine; 
+    margin-bottom: 20px; 
+} 
+.work-item:hover, 
+.work-item:focus{ 
+    border: 5px solid antiquewhite; 
+} 
+.work-img{ 
+    width: 100%; 
 }
-.work-logo{
-    text-decoration: none; 
-    font-size: 50px; 
-    display: flex; 
-    justify-content: center; 
-    background-color: rgb(179, 135, 250); 
-    padding: 5px 12px; 
-    border-radius: 10px; 
-    font-weight: 700; 
-    color: black; 
-}
-.work-ul-nav2{
-    display: flex; 
-    justify-content: space-between; 
-    padding-top: 15px; 
-    padding-bottom: 15px; 
-    width: 700px;
-}
-
-  
