--- a/style.css
+++ b/style.css
@@ -155,3 +155,43 @@ body {
 .work-img{ 
     width: 100%; 
 }
+.reviews{
+    padding-top: 70px;
+    padding-bottom: 70px;
+}
+.reviews-item{
+    width: 500px;
+    padding: 30px 40px;
+    border-radius: 15px;
+    border: 2px solid gray;
+    background-color: antiquewhite;
+    margin-bottom: 30px;
+}
+.reviews-img{
+    width: 100px;
+    border-radius: 50%;
+    height: 100px;
+}
+.reviews-list{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+.button-wrap{
+    display: flex;
+    justify-content: center;
+}
+.reviews-btn{ 
+    padding: 12px 30px; 
+    border: none; 
+    border-radius: 10px; 
+    background-color: rgb(0, 30, 255); 
+    font-size: 22px; 
+    font-weight: 700; 
+    color: white; 
+    cursor: pointer; 
+} 
+.reviews-btn:hover, 
+.reviews-btn:focus{ 
+    background-color: rgb(164, 4, 217); 
+}
