--- a/style.css
+++ b/style.css
@@ -147,6 +147,7 @@ body {
     padding: 30px; 
     background-color: aquamarine; 
     margin-bottom: 20px; 
+    border-radius: 15px;
 } 
 .work-item:hover, 
 .work-item:focus{ 
@@ -194,4 +195,21 @@ body {
 .reviews-btn:hover, 
 .reviews-btn:focus{ 
     background-color: rgb(164, 4, 217); 
+}
+.container-h1-container{
+    justify-content: space-between;
+}
+.contacts{
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
+.contacts-list{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 24px;
+    color: green;
+}
+.contacts-item{
+    margin-bottom: 15px;
 }
